--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint",
-    "build:apk": "npx eas build -p android --profile preview --non-interactive"
+    "build:apk": "npx eas build -p android --profile preview"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -19,7 +19,8 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "expo": "~54.0.30",
-    "expo-av": "~16.0.8",
+    "expo-audio": "~1.1.1",
+    "expo-av": "^16.0.8",
     "expo-constants": "~18.0.12",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
@@ -32,6 +33,7 @@
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
+    "expo-updates": "~29.0.15",
     "expo-web-browser": "~15.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
