--- a/eas.json
+++ b/eas.json
@@ -1,20 +1,24 @@
 {
-    "cli": {
-        "version": ">= 14.2.1"
+  "cli": {
+    "version": ">= 14.2.1"
+  },
+  "build": {
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "channel": "development"
     },
-    "build": {
-        "development": {
-            "developmentClient": true,
-            "distribution": "internal"
-        },
-        "preview": {
-            "android": {
-                "buildType": "apk"
-            }
-        },
-        "production": {}
+    "preview": {
+      "android": {
+        "buildType": "apk"
+      },
+      "channel": "preview"
     },
-    "submit": {
-        "production": {}
+    "production": {
+      "channel": "production"
     }
+  },
+  "submit": {
+    "production": {}
+  }
 }
