change name of App

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "ሙምቲዕ ደርስ በ ኡስታዝ አቡ ጁወይሪያ  ",
+    "name": "   የኪታብ ደርሶች ",
     "slug": "DerseApp",
     "version": "1.0.0",
     "orientation": "portrait",
