change derse app name

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "الحموية - الشيخ አቡ ኒብራስ",
+    "name": "የሸህ አቡ ኒብራስ ደርሶች",
     "slug": "DerseApp",
     "version": "1.0.0",
     "orientation": "portrait",
