fix previous error

--- a/app.json
+++ b/app.json
@@ -12,14 +12,21 @@
     "runtimeVersion": {
       "policy": "appVersion"
     },
-    "updates": {},
+    "updates": {
+      "url": "https://u.expo.dev/7f99365d-c491-4404-ad4a-d2ec093b58ee"
+    },
     "ios": {
       "supportsTablet": true,
       "infoPlist": {
         "UIBackgroundModes": [
+          "audio",
+          "audio",
+          "audio",
           "audio"
-        ]
-      }
+        ],
+        "ITSAppUsesNonExemptEncryption": false
+      },
+      "bundleIdentifier": "com.sualih.abunibras.ders"
     },
     "android": {
       "adaptiveIcon": {
@@ -34,7 +41,9 @@
       "permissions": [
         "WAKE_LOCK",
         "FOREGROUND_SERVICE",
-        "FOREGROUND_SERVICE_AUDIO"
+        "FOREGROUND_SERVICE_AUDIO",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.MODIFY_AUDIO_SETTINGS"
       ]
     },
     "web": {
@@ -73,8 +82,10 @@
     },
     "extra": {
       "router": {},
-      "eas": {}
+      "eas": {
+        "projectId": "dcdf9132-307a-4a5f-9de5-0bb90abc964c"
+      }
     },
-    "owner": "abumahi"
+    "owner": "sualih"
   }
 }
